--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,6 +34,7 @@ moshi = "1.15.1"
 navigationCompose = "2.8.3"
 hiltNavigationCompose = "1.2.0"
 roomKtx = "2.6.1"
+landscapistGlide = "2.4.1"
 #pagingRuntimeKtx = "3.3.2"
 #sandwich = "2.0.10"
 
@@ -82,6 +83,8 @@ androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomKtx" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
+landscapist-glide = { module = "com.github.skydoves:landscapist-glide", version.ref = "landscapistGlide" }
 
 # Kotlin
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
@@ -123,17 +126,17 @@ dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hi
 
 
 [bundles]
-#compose = [
-#    "androidx-activity-compose",
-#    "androidx-lifecycle-runtime-compose",
-#    "androidx-lifecycle-viewmodel-compose",
-#    "androidx-material3",
-#    "androidx-ui",
-#    "androidx-ui-graphics",
-#    "androidx-ui-tooling-preview",
-#    "androidx-navigation-compose"
-#]
-#compose-debug = [
-#    "androidx-ui-tooling",
-#    "androidx-ui-test-manifest",
-#]
+compose = [
+    "androidx-activity-compose",
+    "androidx-lifecycle-runtime-compose",
+    "androidx-lifecycle-viewmodel-compose",
+    "androidx-material3",
+    "androidx-ui",
+    "androidx-ui-graphics",
+    "androidx-ui-tooling-preview",
+    "androidx-navigation-compose"
+]
+compose-debug = [
+    "androidx-ui-tooling",
+    "androidx-ui-test-manifest",
+]
