--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         tools:targetApi="31"
         android:usesCleartextTraffic="true">
         <activity
-            android:name="com.example.presentation.view.MainActivity"
+            android:name="com.example.presentation.screens.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.RescuedAnimals">
             <intent-filter>
