--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ composeCompiler = "1.5.15"
 
 # private
 kotlinxCoroutines = "1.9.0"
+kotlinxSerialization = "1.7.3"
 logger = "2.2.0"
 hiltAndroid = "2.49"
 retrofit = "2.11.0"
@@ -89,6 +90,7 @@ landscapist-glide = { module = "com.github.skydoves:landscapist-glide", version.
 # Kotlin
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
 hilt-core = { group = "com.google.dagger", name = "hilt-core", version.ref = "hiltAndroid" }
+kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 
 
 #androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingRuntimeKtx" }
