--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 # Project info
-projectApplicationId = "com.example.rescuedanimals"
+projectApplicationId = "foxydev97.rescuedanimals"
 projectVersionName = "1.0"
 projectVersionCode = "1"
 projectMinSdkVersion = "26"
